--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@ function closeModal(id) {
                 <!-- Project 1 -->
                 <div class="project-card rounded-xl overflow-hidden card-hover">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" 
+                        <img src="images/amicale home image.jpg" 
                              alt="Project 1" 
                              class="w-full h-full object-cover">
                     </div>
