adding youtube videos links

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@ function closeModal(id) {
                             <span class="px-3 py-1 bg-slate-700 rounded-full text-sm">PostgreSQL</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="https://drive.google.com/file/d/1NaIFhvujvkoiLRUzb0lSr5E5hgMdFdNY/view?usp=drive_link" class="text-primary hover:text-secondary">
+                            <a href="https://www.youtube.com/watch?v=Dqrk-plmnCg" class="text-primary hover:text-secondary">
                                 <i class="fas fa-external-link-alt"></i> Video Demo
                             </a>
                             <a href="projects/amicale.html" class="text-primary hover:text-secondary">
@@ -691,7 +691,7 @@ Platform Dedicated to the Management of all the Services and Activitivities of E
                             <span class="px-3 py-1 bg-slate-700 rounded-full text-sm">MySQL</span>
                         </div>
                         <div class="flex space-x-3">
-                            <a href="https://drive.google.com/file/d/1bpXPwA9vUykJVvC3phiy5F3MsHhVRGCz/view?usp=sharing" class="text-primary hover:text-secondary">
+                            <a href="https://www.youtube.com/watch?v=fNR8KMll3jM" class="text-primary hover:text-secondary">
                                 <i class="fas fa-external-link-alt"></i> Video Demo
                             </a>
                             <a href="projects/etap.html" class="text-primary hover:text-secondary">
